<resources>

	<!-- test message -->
	<!--Basic Information -->
	<!--Not necessary to translate as these are just descriptions. However if you like you can still translate these. -->
    <string name="app_name">Advanced Power Menu</string>
    <string name="launcher_name">Adv. Power Menu</string>
	<string name="xposed_description">Add Reboot, Soft Reboot, Reboot to Recovery and Screenshot to power menu.\nDeveloped by kennethso168@xda</string>
	<string name="credits_msg">Developed by kennethso168@xda</string>
    
	<!-- Reboot Options -->
	<string name="reboot_soft">Soft reboot</string>
    <string name="reboot_recovery">Recovery</string>
    <string name="reboot_bootloader">Bootloader</string>
    <string name="reboot_flashmode">Flash Mode</string>
    <string name="reboot_system1">System1</string>
    <string name="reboot_system2">System2</string>
    <string name="reboot_system12">System1/2</string>
    <string name="reboot_safe">Safe Mode</string>
	
	<!-- Confirmation Dialogs -->
    <string name="reboot_confirm">Your device will reboot.</string>
    <string name="reboot_confirm_recovery">Your device will reboot into recovery.</string>
    <string name="reboot_confirm_bootloader">Your device will reboot into bootloader.</string>
    <string name="reboot_confirm_flashmode">Your device will reboot into flash mode.</string>
	
	<!-- Screenshot  -->
	<string name="take_screenshot">Screenshot</string>
	
	<!-- Quick dial  -->
	<string name="quick_dial">Quick dial</string>
	
	<!-- Toggle Mobile Data -->
	<string name="mobile_data_on">Enable mobile data</string>
	<string name="mobile_data_off">Disable mobile data</string>
	
	<!-- Anti-theft helper -->
	<string name="no_locked_off_dialog">Because anti-theft helper is on, you may not power off the phone or disable mobile data while the device is locked. Unlock the device and try again.</string>
	<string name="device_is_locked">Device is locked</string>
	
	<!-- Preference Screen -->
	<string name="note_title">Note</string>
	<string name="note_summ">You may need to reboot for changes to take effect</string>
	<string name="sect_menu_options">Power Menu Options</string>
	<string name="modify_menu_items">Modify power menu items&#8230;</string>
	<string name="sect_reboot_item">Reboot menu item</string>
	<string name="enable_reboot_title">Advanced reboot</string>
	<string name="enable_reboot_summ">Add/replace the reboot option which allows different reboot methods</string>
	<string name="reboot_workaround_title">Reboot workaround</string>
	<string name="reboot_workaround_summ">Use an alternate implementation for replacing the reboot option. Check this if you have an original reboot option and advanced reboot does not work properly</string>
	<string name="sect_add_items">Add menu items</string>
	<string name="enable_screenshot_title">Screenshot</string>
	<string name="enable_screenshot_summ">Add the option which enables screenshot functionality if none originally exists</string>
	<string name="confirm_dialog_title">Confirmation dialogs</string>
	<string name="quick_dial_number">Quick dial number</string>
	<string name="quick_dial_note">Leave blank to disable this feature</string>
	<string name="quick_dial_label">Quick dial option text</string>
	<string name="disabled">Disabled</string>
	<string name="label_default">Default</string>
	<string name="icon_color_title">Color theme for icons</string>
	<string name="reboot_methods_title">Reboot methods to show&#8230;</string>
	<string name="expand_statusbar_title">Expand status bar</string>
	<string name="expand_statusbar_summ">Add the option which expands the status bar</string>
	<string name="data_toggle">Toggle mobile data</string>
	<string name="data_toggle_summ">Add the option which toggles mobile data connection</string>
	<string name="sect_remove_items">Remove menu items</string>
	<!-- Do not translate or include the "default" strings in other languages -->
	<string name="confirm_dialog_default">0</string>
	<string name="icon_color_title_default">0</string>
	<string name="no_locked_off_title">Anti-theft helper (ATH)</string>
	<string name="no_locked_off_summ">Disable shutdown, reboot, airplane mode toggle and mobile data toggle functions while the device is still at the lockscreen and not yet unlocked</string>
	<string name="ath_hide_desc_title">Hide ATH description</string>
	<string name="ath_hide_desc_summ">Hide the \'Device is locked\' option in the power menu, so a thief will have no idea what\'s going on</string>
	<string name="remove_reboot_title">Remove reboot item</string>
	<string name="remove_reboot_summ">Remove the original reboot item if it exists and advanced reboot is turned off</string>
	<string name="remove_screenshot_title">Remove screenshot item</string>
	<string name="remove_screenshot_summ">Remove the original screenshot item if it exists and screenshot is disabled in the \'Add menu items\' section</string>
	<string name="remove_airplane_title">Remove airplane mode toggle item</string>
	<string name="remove_airplane_summ">Remove the original airplane mode toggle item if it exists</string>
	<string name="ath_fake_poweroff_title">Fake power off</string>
	<string name="ath_fake_poweroff_summ">Replace ATH description with a fake power off button to deceive thieves</string>
	<string name="remove_volume_state_when_locked">Remove volume toggle when locked</string>
	<string name="remove_vol_state_when_locked_summ">Also remove the volume state toggle when the device is at the lockscreen</string>
	<string name="remove_vol_state_workaround_title">Remove last power menu option</string>
	<string name="remove_vol_state_workaround_summ">Blindly remove the last option instead of detecting the volume state toggle option. Check this option if removing the volume state toggle doesn\'t work properly and you have the volume state toggle as the last option</string>
	<string name="remove_vol_state_title">Remove volume state toggle item</string>
	<string name="remove_vol_state_summ">Remove the original airplane mode toggle item</string>
	
	<string name="sect_debug">App Options</string>
	<string name="verbose_log_title">Verbose logging</string>
	<string name="verbose_log_summ">Write full logs into /data/xposed/debug.log</string>
	<string name="hide_ic_launcher_title">Hide launcher icon</string>
	<string name="hide_ic_launcher_dialog">You may need to wait for a while or restart the launcher for changes to take effect.\nAlso, you may access Advanced Power Menu from Xposed Installer > Modules > Advanced Power Menu (Press the item instead of the checkbox).</string>
	
	<string name="sect_about">About</string>
	<string name="app_info_title">App info</string>
	<string name="app_info_before">Advaced Power Menu version&#160;</string>
	<string name="app_info_after">\nby Kenneth So (kennethso168@xda)</string>
	<string name="readme_title">Copyright and Disclaimer</string>
	<!-- It's quite "impossible" to translate the string below. No need to translate it -->
	<string name="readme_content">Copyright &#169; 2013 So Kei Hong. All rights reserved.\n\nTHE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
	
	<string name="license_title">Open source license</string>
	<string name="special_thanks_title">Special thanks</string>
	<string name="troubleshoot_title">Troubleshoot</string>
	<string name="troubleshoot_content">What can you do if the app doesn\'t work / if issue happens?\n\nStep 1: Try fixing it yourself\n1. Make sure that you have read the prerequisites and installation guide thoroughly/\n2. Reboot your phone TWICE (TWO TIMES)\nFor every single xposed mod, a reboot after installation is necessary. But that might not be enough as users have reported that the app doesn\'t work after a single reboot, but things get right when they reboot again. So rebooting TWICE is recommended\n3. Disable all other Xposed Mod\nXposed framework do take care of mods that hook the same method, but sometimes conflicts can still happen. Try disabling all mods except mine in the Xposed Installer. Then reboot and see if things get right.\n4. Clear app data/reinstalling my app\nThe settings may get messed up when my app updates, so try reinstalling and see if it helps.\n5. Use an older version of my app\nTry this and see if it helps. If so that means a new update breaks something old and please tell me about that!\nIf all the above doesn\'t work, you can then send me an issue report.\n\nStep 2: Tell me and see if I can fix it\n(Please don\'t do this before doing step 1)\nPlease send me an issue report including\n1) a description of the issue\n2) screenshots (if it helps explain the situation)\n3) The device, ROM, Android OS version, and the app version\n4) debug.log (Please enable verbose logging in my app first, then do something like long-pressing the power button)(you may obtain the log in xposed installer 2.4)\n5) Anything else you think it\'s important\nthrough one of the following means:\n1) xda forum thread/PM (preferred)\n2) e-mail (NOTE: please begin your subject with [APM] so I can better sort my emails. Thanks)\nPlease note that I can\'t solve the problem with insufficient information. I will also IGNORE any email with NO BODY TEXT (I use gmail)\n\nKeep in mind that even with all the information I still may not be able to fix your problem because I do not own your device and I\'m only a novice android developer. Sorry.</string>
	<string name="xda_title">View xda thread</string>
	<string name="email_title">Email the developer</string>
	<string name="donate_title">Donate</string>
	
	<string name="email_note_title">Note for emails</string>
	<string name="email_note_content">Everyday, I am overwhelmed with tons of emails (not related to this app). Therefore, please note the following points before sending me emails.\n1. I can better notice your message if you use xda posts/PMs\n2. Please read the \"What can you do if the app doesn\'t work / if issue happens?\" before sending me an email (found in Xposed Installer > Download > Advanced Power Menu)\n3. Please begin your subject with [APM] so I can better sort my emails. Thanks.\n4. Please note that I can\'t solve the problem with insufficient information. I will also IGNORE any email with NO BODY TEXT (I use gmail).\n5. I understand only English and Chinese.\nThank you for your cooperation.</string>
	
	
</resources>
